syntax = "proto3";

package countries;

import "common/errors.proto";
import "common/statuses.proto";
import "uoms/uoms.proto";
import "cryptos/cryptos.proto";
import "fiats/fiats.proto";
import "markets/markets.proto";

// Backed by table 'countries'
message Country {
  string id = 1; // System Key: id is generated by the server or the database
  string code = 2; // Human-Readable Key (unique identifier)
  optional string name = 3;
  optional string icon = 4;
  optional string iso3166_a3 = 5;
  optional string iso3166_num = 6;
  optional string internet_cctld = 7;
  optional string region = 8;
  optional string sub_region = 9;
  optional string intermediate_region = 10;
  optional string intermediate_region_code = 11;
  optional string region_code = 12;
  optional string sub_region_code = 13;
  common.Status status = 14;
  optional uoms.List fiats = 15;
  optional uoms.List cryptos = 16;
}

message List {
  repeated Country list = 1;
}

message Select {
  oneof select {
    string by_id = 1;
    string by_code = 2;
  }
}

message SelectList {
  repeated Select list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  string code = 1;
  optional string name = 2; // Default: <TO-DO>
  optional string icon = 3; // Default: <TO-DO>
  optional string iso3166_a3 = 4; // Default: <TO-DO>
  optional string iso3166_num = 5; // Default: <TO-DO>
  optional string internet_cctld = 6; // Default: <TO-DO>
  optional string region = 7; // Default: <TO-DO>
  optional string sub_region = 8; // Default: <TO-DO>
  optional string intermediate_region = 9; // Default: <TO-DO>
  optional string intermediate_region_code = 10; // Default: <TO-DO>
  optional string region_code = 11; // Default: <TO-DO>
  optional string sub_region_code = 12; // Default: <TO-DO>
  optional common.Status status = 13; // Default: STATUS_UNSPECIFIED, which means Country needs to be activated after creation
  optional uoms.SelectList fiats = 14;
  optional uoms.SelectList cryptos = 15;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    Country country = 2;
  }
}

message UpdateRequest {
  Select select = 1;
  optional string code = 2;
  optional string name = 3;
  optional string icon = 4;
  optional string iso3166_a3 = 5;
  optional string iso3166_num = 6;
  optional string internet_cctld = 7;
  optional string region = 8;
  optional string sub_region = 9;
  optional string intermediate_region = 10;
  optional string intermediate_region_code = 11;
  optional string region_code = 12;
  optional string sub_region_code = 13;
  optional common.Status status = 14;
  optional uoms.SelectList fiats = 15;
  optional uoms.SelectList cryptos = 16;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    Country country = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  Select select = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    Country country = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional string code = 1;
  optional string name = 2;
  optional string icon = 3;
  optional string iso3166_a3 = 4;
  optional string iso3166_num = 5;
  optional string internet_cctld = 6;
  optional string region = 7;
  optional string sub_region = 8;
  optional string intermediate_region = 9;
  optional string intermediate_region_code = 10;
  optional string region_code = 11;
  optional string sub_region_code = 12;
  optional common.StatusList status = 13;
  optional fiats.GetListRequest fiats = 14;
  optional cryptos.GetListRequest cryptos = 15;
}

message GetListResponse { // ListResponse is formatted for streaming
  oneof response {
    common.Error error = 1;
    Country country = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  Select select = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    Country country = 2;
  }
}

// The following messages manage the assignment of fiats, cryptos (countries_uoms) and markets (countries_markets) to a country

// -- Fiat --

message Fiat {
  string id = 1;
  string code = 2;
  fiats.Fiat fiat = 3;
}

message FiatList {
  string id = 1;
  string code = 2;
  uoms.List fiats = 3;
}

message SetFiatsRequest {
  Select select = 1;
  uoms.SelectList fiats = 2;
}

message SetFiatsResponse {
  oneof response {
    common.Error error = 1;
    FiatList fiats = 2;
  }
}

message AddFiatsRequest {
  Select select = 1;
  uoms.SelectList fiats = 2;
}

message AddFiatsResponse {
  oneof response {
    common.Error error = 1;
    FiatList fiats = 2;
  }
}

message GetFiatsRequest {
  Select select = 1;
}

message GetFiatsResponse {
  oneof response {
    common.Error error = 1;
    FiatList fiats = 2;
  }
}

// A remove fiats request is just a fiat update request with status set to TERMINATED in table 'countries_uoms'
message RemoveFiatsRequest {
  Select select = 1;
  optional uoms.SelectList fiats = 2; // Remove all if no specified list
}

message RemoveFiatsResponse {
  oneof response {
    common.Error error = 1;
    FiatList fiats = 2;
  }
}

// -- Crypto --

message Crypto {
  string id = 1;
  string code = 2;
  cryptos.Crypto crypto = 3;
}

message CryptoList {
  string id = 1;
  string code = 2;
  uoms.List cryptos = 3;
}

message SetCryptosRequest {
  Select select = 1;
  uoms.SelectList cryptos = 2;
}

message SetCryptosResponse {
  oneof response {
    common.Error error = 1;
    CryptoList cryptos = 2;
  }
}

message AddCryptosRequest {
  Select select = 1;
  uoms.SelectList cryptos = 2;
}

message AddCryptosResponse {
  oneof response {
    common.Error error = 1;
    CryptoList cryptos = 2;
  }
}

message GetCryptosRequest {
  Select select = 1;
}

message GetCryptosResponse {
  oneof response {
    common.Error error = 1;
    CryptoList cryptos = 2;
  }
}

// A remove cryptos request is just a crypto update request with status set to TERMINATED in table 'countries_uoms'
message RemoveCryptosRequest {
  Select select = 1;
  optional uoms.SelectList cryptos = 2; // Remove all if no specified list
}

message RemoveCryptosResponse {
  oneof response {
    common.Error error = 1;
    CryptoList cryptos = 2;
  }
}

// -- Market --

message Market {
  string id = 1;
  string code = 2;
  markets.Market market = 3;
}

message MarketList {
  string id = 1;
  string code = 2;
  uoms.List markets = 3;
}

message SetMarketsRequest {
  Select select = 1;
  uoms.SelectList markets = 2;
}

message SetMarketsResponse {
  oneof response {
    common.Error error = 1;
    MarketList markets = 2;
  }
}

message AddMarketsRequest {
  Select select = 1;
  uoms.SelectList markets = 2;
}

message AddMarketsResponse {
  oneof response {
    common.Error error = 1;
    MarketList markets = 2;
  }
}

message GetMarketsRequest {
  Select select = 1;
}

message GetMarketsResponse {
  oneof response {
    common.Error error = 1;
    MarketList markets = 2;
  }
}

// A remove markets request is just a market update request with status set to TERMINATED in table 'countries_markets'
message RemoveMarketsRequest {
  Select select = 1;
  optional uoms.SelectList markets = 2; // Remove all if no specified list
}

message RemoveMarketsResponse {
  oneof response {
    common.Error error = 1;
    MarketList markets = 2;
  }
}
